# staykin-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_listings.py  0002_listings_room_type.py  0002_room_flatmate_team.py  0003_requests_rooms_teams.py
app/: main.py
app/core/: config.py  db.py  imagekit.py  logging.py  vibe.py
app/db/seeds/: amenities.py  bhks.py  decision_statuses.py  furnishings.py  genders.py  lifestyle_affinity.py  lifestyle_tags.py  listing_gender_prefs.py  localities.py  move_ins.py  occupations.py  request_statuses.py  request_target_kinds.py  room_types.py
app/models/: __init__.py  connection_request.py  enums.py  listing.py  locality.py  room.py  team.py  user.py
app/routers/: flatmates.py  lifestyle_tags.py  listings.py  localities.py  occupations.py  profile.py  requests.py  rooms.py  teams.py  uploads.py  users.py
app/schemas/: _validators.py  connection_request.py  flatmate.py  lifestyle_tag.py  listing.py  locality.py  occupation.py  room.py  team.py  upload.py  user.py
scripts/: clear_db.sh  dbshell.sh  deploy.sh  logs.sh  seed_dummy.sh
